! Multiple + Added 'Debug' board type (includes every node category) + Added example node so that I don't forget how to create custom pin menus + Added smart default value editor for AdditionNode ~ Fixed new AdditionNode pins not being int-locked when necessary ~ Fixed nodes with long center names being squished against an invisible barrier

--- a/boards/boardstyle.css
+++ b/boards/boardstyle.css
@@ -8,12 +8,14 @@
 * {
 	font-family: "Roboto";
 	font-weight: 400;
-	/*outline: 1px dashed #ff000033 !important;*/
 }
 
 .container {
 	transform-origin: 0px 0px;
+	width: 0px;
+	height: 0px;
 	position: relative;
+	white-space: nowrap;
 	overflow: visible;
 	pointer-events: painted;
 }
